Fixed long comment overflow

--- a/src/routes/incidents/detail/comment/commentContent/Styles.css
+++ b/src/routes/incidents/detail/comment/commentContent/Styles.css
@@ -16,4 +16,5 @@
 .comment-body {
     font-size: 9pt;
     font-weight: lighter;
+    word-break: break-word;
 }
